--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
-<html>
+<html lang = "en">
     <head>
         <title>Home</title>
+         <meta charset = "UTF-8">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
         <link rel="stylesheet" type="text/css" href="main-css.css">
     </head>
