5/19 Navigation Bar Addition Beginnings
attempting to add in n animation of a cylon eye for the navigation bar. Proving to be challenging with animation.

--- a/index.html
+++ b/index.html
@@ -2,20 +2,22 @@
 <html lang = "en">
     <head>
         <title>Home</title>
-         <meta charset = "UTF-8">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
+        <meta charset = "UTF-8">
         <link rel="stylesheet" type="text/css" href="main-css.css">
-    </head>
-    <body>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
         <!--<canvas id = "datastream"></canvas>-->
         <script src="canvas-animation.js"></script>
-        <ul>
-            <li>Projects</li>
-            <li>Education</li>
-            <li>Interests</li>
-            <li>Experience</li> <!--connecting a network of these as the links that connect to make my site map and act as the menu bar-->
-            <li>Involvement</li> <!--Cylon Characters that drop down for js animation-->
-        </ul>
-        
+        <script src="navbar.js"></script>
+    </head>
+    <body>
+        <div id = "navigation" id = "animate">
+            <ul>
+                <li><a href = "#">Projects</a></li>
+                <li><a href = "#">Education</a></li>
+                <li><a href = "#">Interests</a></li>
+                <li><a href = "#">Experience</a></li> <!--connecting a network of these as the links that connect to make my site map and act as the menu bar-->
+                <li><a href = "#">Involvement</a></li> <!--Cylon Characters that drop down for js animation--> 
+            </ul>
+        </div>
     </body>
 </html>
