--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
         <meta charset = "UTF-8">
         <link rel="stylesheet" type="text/css" href="main-css.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
-        <!--<canvas id = "datastream"></canvas>-->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="canvas-animation.js"></script>
         <script src="navbar.js"></script>
     </head>
     <body>
-        <div id = "navigation" id = "animate">
+        <div id="navigation" id="animate">
+            <div id="guide"></div>
             <ul>
+                <li><a href = "index.html">Home</a></li>
                 <li><a href = "#">Projects</a></li>
                 <li><a href = "#">Education</a></li>
                 <li><a href = "#">Interests</a></li>
                 <li><a href = "#">Experience</a></li> <!--connecting a network of these as the links that connect to make my site map and act as the menu bar-->
                 <li><a href = "#">Involvement</a></li> <!--Cylon Characters that drop down for js animation--> 
             </ul>
+            
         </div>
     </body>
 </html>
