--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="navigation" id="animate">
             <div id="guide"></div>
             <ul>
-                <li><a href = "index.html">Home</a></li>
+                <li class = "active"><a href = "index.html">Home</a></li>
                 <li><a href = "#">Projects</a></li>
                 <li><a href = "#">Education</a></li>
                 <li><a href = "#">Interests</a></li>
