Additions for fadeIn and greeting
Added in a greeting to my homepage and fadein effect when the page first opens

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
                 <li><a href = "#">Experience</a></li> <!--connecting a network of these as the links that connect to make my site map and act as the menu bar-->
                 <li><a href = "#">Involvement</a></li> <!--Cylon Characters that drop down for js animation--> 
             </ul>
-            
+        </div>
+        <div id = "greeting">
+            <span class = "spec-heading">Welcome!</span>
+            <p id = "greeting-message">
+                Learn about my passions, interests, and projects. If you want to get in contact please do so.
+            </p><!--Welcome should change into different language greetings-->
         </div>
     </body>
 </html>
