--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <title>Home</title>
         <meta charset = "UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="main-css.css">
+        <link rel="stylesheet" type="text/css" href="CSS/main-css.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="canvas-animation.js"></script>
-        <script src="navbar.js"></script>
+        <script src="JS/canvas-animation.js"></script>
+        <script src="JS/navbar.js"></script>
     </head>
     <body>
         <div id="navigation" id="animate">
